--- a/extension/index.html
+++ b/extension/index.html
@@ -3,7 +3,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>Gistify</title>
+    <title>動画より文字派！</title>
   </head>
   <body>
     <div id="root"></div>
